--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chroma-js": "^2.4.2",
     "mongoose": "^8.3.2",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.2",
